fixed overflow-x, and changed font-size for footer

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+html,
 body {
   background-color: #27241a;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
 }
